Added referee omponent and api. RefereeRepository design.

--- a/web/components/referee/referee-show.html
+++ b/web/components/referee/referee-show.html
@@ -1,4 +1,4 @@
 <div>
-  {{ referee.id }} {{ referee.name_first }} {{ referee.name_last }}
+  {{ referee.id }} {{ referee.name_first }} {{ referee.name_last }} X {{ referee.nameFull() }} X
       <a href="#/referees">Back to List</a>
 </div>
