Added access control to headers. Revamped Referee constructor.

--- a/web/components/referee/referee-list.html
+++ b/web/components/referee/referee-list.html
@@ -1,7 +1,7 @@
 <div>
   <ul class="referees">
     <li ng-repeat="referee in referees">
-      {{ referee.id }} {{ referee.name_first }} {{ referee.name_last }} X {{ referee.nameFull() }} X
+      {{ referee.id }} {{ referee.name_first }} {{ referee.name_last }} X {{ referee.name_full }} X
       <a href="#/referees/{{referee.id}}/show">Show</a>
       <a href="#/referees/{{referee.id}}/update">Update</a>
     </li>
